force-app/main/default/objects/Apttus__APTS_Related_Agreement__c/Apttus__APTS_Related_Agreement__c.object-meta.xml
<CustomObject>
    <description>To identify the different types of relationships between agreements</description>
    <label>Related Agreement</label>
    <nameField>
        <label>Relationship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>