force-app/main/default/objects/Apttus__APTS_Related_Agreement__c/fields/Apttus__APTS_Contract_From__c.field-meta.xml
<CustomField>
    <fullName>Apttus__APTS_Contract_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Relationship From</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipName>R00N50000001Xl0WEAS</relationshipName>
    <type>Lookup</type>
</CustomField>