force-app/main/default/objects/Apttus__APTS_Related_Agreement__c/fields/Apttus__Relationship_From_Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Relationship_From_Type__c</fullName>
    <label>Relationship From Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Related NDA Is</fullName>
            </value>
            <value>
                <fullName>Is NDA For</fullName>
            </value>
            <value>
                <fullName>Is Master Of</fullName>
            </value>
            <value>
                <fullName>Is Child Of</fullName>
            </value>
            <value>
                <fullName>Is Related Contract</fullName>
            </value>
            <value>
                <fullName>Is SOW Of</fullName>
            </value>
            <value>
                <fullName>Is Amendment For</fullName>
            </value>
            <value>
                <fullName>Is Amended By</fullName>
            </value>
            <value>
                <fullName>Is Superceded By</fullName>
            </value>
            <value>
                <fullName>Is Renewed By</fullName>
            </value>
            <value>
                <fullName>Is Renewal For</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>